# rasp_boot

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject.toml.bak  requirements.txt
data/known_hashes/: raspi_boot_sha256.json
notebooks/: Exploration.ipynb
pi_forensics_toolkit/: cli.py  report.py
scripts/: analyze_existing_image.sh  collect_artifacts.sh  mount_from_image.sh  update_baseline_from_dir.sh
src/pi_bootcheck/: artifacts.py  cli.py  parse_strings.py  report.py  utils.py
src/pi_forensics_toolkit/: artifacts.py  cli.py  report.py
tests/: test_parse_string.py  test_parse_strings.py  test_utils.py
