[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pibootcheck"
version = "0.1.1"
description = "Read-only Raspberry Pi boot-chain verification toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "0xdials" }]
dependencies = [
  "click>=8.0",
  "rich>=13.0",
  "jinja2>=3.0",
  "pandas>=2.0",
  "python-dateutil>=2.8",
  "tldextract>=3.4"
]

[project.scripts]
pibootcheck = "pi_bootcheck.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "data*", "notebooks*", "scripts*", "output*"]

